# timetable-bot

./: Cargo.toml
src/: context.rs  day.rs  handlers.rs  lesson.rs  main.rs  weekday_wrapper.rs
